<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aurelionsulll.i_learn.FragmentHome"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_add_post"
        android:name="com.aurelionsulll.i_learn.AddPostFragment"
        android:label="@string/title_joined_post"
        tools:layout="@layout/fragment_add_post" />

    <fragment
        android:id="@+id/navigation_setup"
        android:name="com.aurelionsulll.i_learn.ProfileFragment"
        android:label="@string/setup"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_joined_post"
        android:name="com.aurelionsulll.i_learn.JoinedPostFragment"
        android:label="@string/setup"
        tools:layout="@layout/fragment_joined_post" />


</navigation>